@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2021-04-06 r80146) -- "Unsuffered Consequences"
+R version 4.0.5 Patched (2021-03-31 r80163) -- "Shake and Throw"
 Copyright (C) 2021 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -48,6 +48,7 @@ doExtras: FALSE
 + 	  identical(m[2, 3],  16), # simple number
 + 	  identical(m[2, 3:4], c(16,23)), # simple numeric of length 2
 + 	  identical(m[NA,NA], as(Matrix(NA, 7,4), "dMatrix")))
+M[m,m,m] : nargs()=2
 M[i,i,m] : nargs()=3
 M[i,i,m] : nargs()=3
 M[i,i,m] : nargs()=3
@@ -1467,6 +1468,7 @@ M[i,i,m] : nargs()=3
 Csp[i,i,l] : nargs()=4
 M[i,i,m] : nargs()=3
 Csp[i,i,l] : nargs()=4
+M[m,m,m] : nargs()=2
 M[i,i,m] : nargs()=3
 Csp[i,i,l] : nargs()=4
 M[i,i,m] : nargs()=3
@@ -1955,6 +1957,8 @@ Csp[m,i,l] : nargs()=4
 M[i,m,m] : nargs()=3
 diag[i,m,l] : nargs()=4
 Csp[i,m,l] : nargs()=4
+M[m,m,m] : nargs()=3
+M[m,m, TRUE] : nargs()=4
 M[i,m,m] : nargs()=2
 M[logi,m,m] : nargs()=2
 <sparse>[ <logic> ] : .M.sub.i.logical() maybe inefficient
@@ -1966,6 +1970,8 @@ M[m,i,m] : nargs()=3
 Csp[m,i,l] : nargs()=4
 M[i,m,m] : nargs()=3
 Csp[i,m,l] : nargs()=4
+M[m,m,m] : nargs()=3
+M[m,m, TRUE] : nargs()=4
 > 
 > expr <- quote({ ## FIXME -- both 'TRUE' and 'FALSE'  should fail "out of bound",etc
 +   D0[TRUE, TRUE ]
@@ -3381,14 +3387,64 @@ diagnosing replTmat(x,i,j,v): nargs()= 3; missing (i,j) = (0,1)
 > ## gave 'Error' invalid ..“dsparseVector”.. 'i' must be sorted strictly increasingly
 > stopifnot(all.equal(x[i] ,  y1+y2, tolerance=0),
 + 		    x[i] == y1+y2)
-> 
-> 
-> 
-> 
 > showProc.time()
-Time (user system elapsed): 0.1 0.001 0.102 
+Time (user system elapsed): 0.107 0 0.107 
 > 
 > if(!interactive()) warnings()
+> 
+> ## [matrix-Bugs][#6720] Subsetting with empty indices does not drop -- 17 Apr 2021, by David Cortes
+> ##  https://r-forge.r-project.org/tracker/?func=detail&atid=294&aid=6720&group_id=61
+> 
+> ## extended by MM to all versions of "empty" :
+> x <- c(1,8)
+> (m1 <-  rbind(x))
+  [,1] [,2]
+x    1    8
+> m1[]             # remains matrix
+  [,1] [,2]
+x    1    8
+> m1[,,drop=FALSE] # ditto
+  [,1] [,2]
+x    1    8
+> m1[,] # [1] 1 2 -- drops (as default drop=TRUE !)
+[1] 1 8
+> 
+> ## Sparse Matrix and  actually *any* Matrix-extending class did not work
+> (M1 <- as(m1, "denseMatrix")) # "dgeMatrix"
+1 x 2 Matrix of class "dgeMatrix"
+  [,1] [,2]
+x    1    8
+> S1 <- as(m1, "CsparseMatrix")
+> R1 <- as(m1, "RsparseMatrix")
+> stopifnot(exprs = {
++     identical(M1[], M1) # remains
++     identical(S1[], S1) # remains
++     identical(R1[], R1) # remains
++     identical(M1[,,drop=FALSE], M1) # ditto
++     identical(S1[,,drop=FALSE], S1) #  "
++     identical(R1[,,drop=FALSE], R1) #  "
++     ## but drop=TRUE  which is the *default* much be obeyed (also for *empty* (i,j):
++     identical(m1[,], x)
++     identical(M1[,], x) # should drop, but did not
++     identical(S1[,], x) #  "
++     identical(R1[,], x) #  "
++     identical(m1[,,drop=TRUE], x)
++     identical(M1[,,drop=TRUE], x) # should drop, but did not
++     identical(S1[,,drop=TRUE], x) #  "
++     identical(R1[,,drop=TRUE], x)  # "
++ })
+> 
+> 
+> ## [matrix-Bugs][#6721] Assignment to 'dgRMatrix' with missing index takes only first element
+> ## MM: This has been fixed already!
+> X <- rbind(0, 1:3, 0, c(0,1,0))
+> Rx <- as(X, "RsparseMatrix")
+> Cx <- as(X, "CsparseMatrix")
+> X [2,] <- 0
+> Cx[2,] <- 0
+> Rx[2,] <- 0
+> stopifnot(all(Cx == X),
++           all(Rx == X))
 > 
 > proc.time()
    user  system elapsed 
